--- a/styles/style.css
+++ b/styles/style.css
@@ -83,7 +83,8 @@ main {
 
 /* Hero Section */
 .hero {
-  flex: 1;
+  padding-top: 120px; 
+  padding-bottom: 60px;
   display: flex;
   flex-direction: column;
   justify-content: center;
