--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,7 @@ header {
   align-items: center;
   background-color: #1e1e1e;
   padding: 20px;
-  margin-bottom: 20px;
+
   border-radius: 0;
   width: 100%;
 }
@@ -476,4 +476,33 @@ ul li {
   text-decoration: none;
   color: inherit;
   display: block; /* makes the whole link act like a div */
+}
+
+.promo-banner {
+  width: 100%;
+  background-color: #d8a92b;
+  color: #000;
+  overflow: hidden;
+  white-space: nowrap;
+  padding: 10px 0;
+  text-align: center;
+  z-index: 999;
+  position: relative;
+}
+
+.promo-text {
+  display: inline-block;
+  padding-left: 100%;
+  animation: slideBanner 15s linear infinite;
+  font-weight: bold;
+  font-size: 1rem;
+}
+
+@keyframes slideBanner {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
 }
